tests/baselines/reference/parser_breakTarget5.errors.txt
parser_breakTarget5.ts(3,12): error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
parser_breakTarget5.ts(5,7): error TS1107: Jump target cannot cross function boundary.


==== parser_breakTarget5.ts (2 errors) ====
    target:
    while (true) {
      function f() {
               ~
!!! error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
        while (true) {
          break target;
          ~~~~~~~~~~~~~
!!! error TS1107: Jump target cannot cross function boundary.
        }
      }
    }